Exception classes need to set their constructors on the global object themselves since they don't use JS_InitClass. bug 342359, r=brendan